ldms/src/core/ldms.h

typedef struct ldms_xprt *ldms_t;
typedef struct ldms_set *ldms_set_t;
typedef struct ldms_schema_s *ldms_schema_t;
/** \} */

/**
 * \addtogroup ldms_set LDMS Metric Set Management
 *
 * These functions are used to create and destroy local metric sets
 * and to update the contents of remote metric sets.
 * \{
 */

/** The update is the result of a peer push */
#define LDMS_UPD_F_PUSH		0x10000000
/** This is final push update for this set */
#define LDMS_UPD_F_PUSH_LAST	0x20000000
/** Indicate more outstanding update completion on the set */
#define LDMS_UPD_F_MORE		0x40000000
#define LDMS_UPD_ERROR_MASK 0x00FFFFFF
#define LDMS_UPD_ERROR(s) ((s) & LDMS_UPD_ERROR_MASK)
/**
 * \brief Prototype for the function called when update completes.
 *
 * You cannot call back into the transport from this function or it will
 * deadlock.
 *
 * \param t	The transport endpoint.
 * \param s	The metric set handle updated.
 * \param flags One or more of the LDMS_UPD_F_xxx flags bitwise-OR
 * 		the error code in case of an error.
 * \param arg	The callback argument specified in the call to \c ldms_update.
 */
typedef void (*ldms_update_cb_t)(ldms_t t, ldms_set_t s, int flags, void *arg);
/**
 * \brief Update the metric set contents.
 *
 * Updates the local copy of the metric set.
 *
 * \param s	The metric set handle to update.
 * \param update_cb The function to call when the update has completed
 *		    and the metric data has been updated.
 * \param cb_arg A user defined context value to provide to the update_cb function.
 * \returns	0 on success or a non-zero value to indicate an error.
 */
extern int ldms_xprt_update(ldms_set_t s, ldms_update_cb_t update_cb, void *arg);
/**
 * \brief Create a metric set schema
 *
 * Create a metric set schema. The schema can later be used to create
 * a metric set. The schema name must be unique.
 *
 * \param name	The set schema name
 * \retval !0 The schema handle.
 * \retval ENOMEM There were insufficient resources to create the schema
 */
extern ldms_schema_t ldms_schema_new(const char *schema_name);
 /**
 * \brief Destroy a schema
 *
 * Release the resources consumed by the schema.
 *
 * This has no affect on any metric sets that were created with
 * this schema.
 *
 * \param schema The schema handle.
 */
extern void ldms_schema_delete(ldms_schema_t schema);
/**
 * \brief Return the number of metrics in the schema
 *
 * \param schema
 * \returns The number of metrics in the schema
 */
extern int ldms_schema_metric_count_get(ldms_schema_t schema);
/**
 * \brief Set the cardinality of the set array created by this schema.
 *
 * \param schema The schema handle.
 * \param card   The cardinality.
 *
 * \retval 0      If succeeded.
 * \retval EINVAL If \c card is invalid.
 */
extern int ldms_schema_array_card_set(ldms_schema_t schema, int card);
/**
 * \brief Create a Metric set
 *
 * Create a metric set on the local host. The metric set is added to
 * the data base of metric sets exported by this host. The <tt>instance_name</tt>
 * parameter specifies the name of the metric set as it will appear to
 * hosts who query the set dictionary with ldms_dir().
 *
 * Multiple metric sets of the same type (schema) may be created
 * provided that they have different instance names.
 *
 * Upon creation, the metric set will have the authentication values
 * (uid, gid, perm) currently set as the global defaults. After creation
 * but before publishing the metric set, the authentication values may be
 * adjusted from the defaults be using the ldms_set_{uid|gid|perm}_set()
 * functions.
 *
 * The remote peer will not be able to get the set in the directory listing,
 * nor be able to perform \c ldms_xprt_lookup() without a proper
 * owner/group/permission. The permission is 9-bit UNIX style
 * (owner-group-other read-write-execute).
 *
 * \param instance_name	The metric set instance name.
 * \param schema	The metric set schema being created.
 * \param s		Pointer to ldms_set_t handle that will be set to the new handle.
 * \returns Pointer to the new metric set or NULL if there is an error. Errno will be set
 * as appropriate as follows:
 * - ENOMEM Insufficient resources
 * - EEXIST The specified instance name is already used.
 * - EINVAL A parameter or the schema itself is invalid
 */
extern ldms_set_t ldms_set_new(const char *instance_name, ldms_schema_t schema);
/**
 * \brief Create an LDMS metric set with owner and permission
 *
 * Create a metric set, like ::ldms_set_new(), but with a specified owner \c
 * uid-gid and a permission \c perm. The remote peer will not be able to get the
 * set in the directory listing, nor be able to perform \c ldms_xprt_lookup()
 * without a proper owner/group/permission. The permission is 9-bit UNIX style
 * (owner-group-other read-write-execute).
 *
 * \param instance_name The name of the metric set.
 * \param schema        The schema of the set.
 * \param uid           The user ID of the set owner.
 * \param gid           The group ID of the set owner.
 * \param perm          The UNIX mode_t bits (see chmod)
 *
 * \retval NULL If failed.
 * \retval setp The set pointer, if success.
 */
ldms_set_t ldms_set_new_with_auth(const char *instance_name,
				  ldms_schema_t schema,
				  uid_t uid, gid_t gid, mode_t perm);
/**
 * \}  (ldms_set_config)
 */

/**
 * \brief Publish the LDMS set.
 * \param set The set handle.
 * \retval 0      If succeeded.
 * \retval EEXIST If the set has already been published.
 */
int ldms_set_publish(ldms_set_t set);
/**
 * \brief Unpublish the LDMS set.
 * \param set The set handle.
 * \retval 0      If succeeded.
 * \retval ENOENT If the set has not yet published.
 */
int ldms_set_unpublish(ldms_set_t set);
/**
 * \brief Delete the set
 *
 * The set will be deleted when all set references are released.
 *
 * \param s	The metric set handle.
 */
extern void ldms_set_delete(ldms_set_t s);
/**
 * @brief Drop the reference obtained by ldms_set_by_name()
 *
 * @param s The metric set handle
 */
void ldms_set_put(ldms_set_t s);
/**
 * \brief Add an key-value pair set information
 *
 * If the key exists, the function resets the value to the new value \c value.
 * Adding a key-value pair potentially hides the key-value pair
 * gotten from a lookup response that has the same key.
 *
 * \c ldms_set_info_unset() can be used to unset the value. Afterward, \c ldms_set_info_get()
 * can be used to get the value gotten from the lookup reply.
 *
 * \param s	The set handle
 * \param key	The name of the information
 * \param value	The information
 *
 * \return 0 on success. ENOMEM if malloc fails. EINVAL if \c s does not exist.
 *
 * \see ldms_set_info_unset, ldms_set_info_get
 */
extern int ldms_set_info_set(ldms_set_t s, const char *key, const char *value);
/**
 * \brief Unset the value of of the given key.
 *
 * A key value pair which is set by \c ldms_set_info_set will be unset. Applications
 * may use the function to unset a value to access the value received from a lookup reply
 * with the same key.
 *
 * The key-value pairs from lookup replies will be untouched.
 *
 * \param s	The set handle
 * \param key	The key string
 *
 * \see ldms_set_info_set
 */
extern void ldms_set_info_unset(ldms_set_t s, const char *key);
/**
 * \brief Return a copy of the value of the given key
 *
 * \param s	The set handle
 * \param key	The key
 *
 * \return The value of the key. NULL is returned if the key does not exist or
 *         there is an error.
 */
extern char *ldms_set_info_get(ldms_set_t s, const char *key);
/**
 * \brief Add a metric to schema
 *
 * Adds a metric to a metric set schema. The \c name of the metric must be
 * unique within the metric set.
 *
 * \param s	The schema handle.
 * \param name	The name of the metric.
 * \param t	The type of the metric.
 * \retval >=0  The metric index.
 * \retval <0	Insufficient resources or duplicate name
 */
extern int ldms_schema_metric_add(ldms_schema_t s, const char *name, enum ldms_value_type t);
/**
 * \brief Add an attribute to schema
 *
 * Adds a meta-metric to a set schema. The \c name of the meta-metric must be
 * unique within the set.
 *
 * \param s	The ldms_set_t handle.
 * \param name	The name of the attribute.
 * \param t	The type of the attribute.
 * \retval >=0  The attribute index.
 * \retval <0	Insufficient resources or duplicate name
 */
extern int ldms_schema_meta_add(ldms_schema_t s,
				const char *name, enum ldms_value_type t);
/**
 * \brief Add an array metric to schema
 *
 * Adds a metric of an array type to a metric set schema.
 * The \c name of the metric must be
 * unique within the metric set.
 *
 * \param s	The ldms_set_t handle.
 * \param name	The name of the metric.
 * \param t	The type of the metric.
 * \param count The number of elements in the array
 * \retval >=0  The metric index.
 * \retval <0	Insufficient resources or duplicate name
 */
extern int ldms_schema_metric_array_add(ldms_schema_t s, const char *name,
		enum ldms_value_type t, uint32_t count);
extern int ldms_schema_meta_array_add(ldms_schema_t s, const char *name,
		enum ldms_value_type t, uint32_t count);
/**
 * \brief Get the metric index given a name
 *
 * Returns the metric index  for the metric with the specified
 * name. This index can then be used with the ldms_metric_get_type() functions
 * to return the value of the metric.
 *
 * \param s	The metric set handle
 * \param name	The name of the metric.
 * \returns	The metric set handle or -1 if there is none was found.
 */
extern int ldms_metric_by_name(ldms_set_t s, const char *name);
/**
 * \brief Returns the name of a metric.
 *
 * Returns the name of the metric specified by the handle.
 *
 * \param s	The set handle
 * \param i	The metric index
 * \returns	A character string containing the name of the metric.
 */
extern const char *ldms_metric_name_get(ldms_set_t s, int i);
/**
 * \brief Returns !0 (true) if the type is an array
 *
 * \param t	The metric type
 * \returns	TRUE(!0) if the type is an array
 */
int ldms_type_is_array(enum ldms_value_type t);
/**
 * \brief Returns the type of a metric.
 *
 * Returns the type of the metric specified by the handle.
 *
 * \param s	The set handle
 * \param i	The metric index
 * \returns	The ldms_value_type for the metric.
 */
extern enum ldms_value_type ldms_metric_type_get(ldms_set_t s, int i);
/**
 * \brief Return the ldms_mval_t for the specified metric
 *
 * \note ldms expects the elements in the array to be little-endian.
 *
 * \param s The set handle.
 * \param i The metric Id.
 * \retval ldms_mval_t for the metric.
 */
ldms_mval_t ldms_metric_get(ldms_set_t s, int i);
/**
 * \brief Get length of the array metric.
 *
 * \param s The set handle.
 * \param i The metric ID.
 * \retval len The length (number of elements) of the array.
 */
uint32_t ldms_metric_array_get_len(ldms_set_t s, int i);
/**
 * \brief Set the value of a metric.
 *
 * Set the specified metric \c m to the value specified
 * by \c v.
 *
 * \param s	The set handle.
 * \param i	The metric index
 * \param v	The value.
 */
void ldms_metric_set_char(ldms_set_t s, int i, char v);
void ldms_metric_set_u8(ldms_set_t s, int i, uint8_t v);
void ldms_metric_set_u16(ldms_set_t s, int i, uint16_t v);
void ldms_metric_set_u32(ldms_set_t s, int i, uint32_t v);
void ldms_metric_set_u64(ldms_set_t s, int i, uint64_t v);
void ldms_metric_set_s8(ldms_set_t s, int i, int8_t v);
void ldms_metric_set_s16(ldms_set_t s, int i, int16_t v);
void ldms_metric_set_s32(ldms_set_t s, int i, int32_t v);
void ldms_metric_set_s64(ldms_set_t s, int i, int64_t v);
void ldms_metric_set_float(ldms_set_t s, int i, float v);
void ldms_metric_set_double(ldms_set_t s, int i, double v);
void ldms_metric_array_set_str(ldms_set_t s, int mid, const char *str);
void ldms_metric_array_set_char(ldms_set_t s, int mid, int idx, char v);
void ldms_metric_array_set_u8(ldms_set_t s, int mid, int idx, uint8_t v);
void ldms_metric_array_set_u16(ldms_set_t s, int mid, int idx, uint16_t v);
void ldms_metric_array_set_u32(ldms_set_t s, int mid, int idx, uint32_t v);
void ldms_metric_array_set_u64(ldms_set_t s, int mid, int idx, uint64_t v);
void ldms_metric_array_set_s8(ldms_set_t s, int mid, int idx, int8_t v);
void ldms_metric_array_set_s16(ldms_set_t s, int mid, int idx, int16_t v);
void ldms_metric_array_set_s32(ldms_set_t s, int mid, int idx, int32_t v);
void ldms_metric_array_set_s64(ldms_set_t s, int mid, int idx, int64_t v);
void ldms_metric_array_set_float(ldms_set_t s, int mid, int idx, float v);
void ldms_metric_array_set_double(ldms_set_t s, int mid, int idx, double v);
/**
 * \brief Get the value of a metric.
 *
 * Get the specified metric \c m
 *
 * \param s	The set handle.
 * \param i	The metric index
 * \returns	Unsigned byte value from the metric.
 */
char ldms_metric_get_char(ldms_set_t s, int i);
uint8_t ldms_metric_get_u8(ldms_set_t s, int i);
uint16_t ldms_metric_get_u16(ldms_set_t s, int i);
uint32_t ldms_metric_get_u32(ldms_set_t s, int i);
uint64_t ldms_metric_get_u64(ldms_set_t s, int i);
int8_t ldms_metric_get_s8(ldms_set_t s, int i);
int16_t ldms_metric_get_s16(ldms_set_t s, int i);
int32_t ldms_metric_get_s32(ldms_set_t s, int i);
int64_t ldms_metric_get_s64(ldms_set_t s, int i);
float ldms_metric_get_float(ldms_set_t s, int i);
double ldms_metric_get_double(ldms_set_t s, int i);
const char *ldms_metric_array_get_str(ldms_set_t s, int id);
char ldms_metric_array_get_char(ldms_set_t s, int id, int idx);
uint8_t ldms_metric_array_get_u8(ldms_set_t s, int id, int idx);
uint16_t ldms_metric_array_get_u16(ldms_set_t s, int id, int idx);
uint32_t ldms_metric_array_get_u32(ldms_set_t s, int id, int idx);
uint64_t ldms_metric_array_get_u64(ldms_set_t s, int id, int idx);
int8_t ldms_metric_array_get_s8(ldms_set_t s, int id, int idx);
int16_t ldms_metric_array_get_s16(ldms_set_t s, int id, int idx);
int32_t ldms_metric_array_get_s32(ldms_set_t s, int id, int idx);
int64_t ldms_metric_array_get_s64(ldms_set_t s, int id, int idx);
float ldms_metric_array_get_float(ldms_set_t s, int id, int idx);
double ldms_metric_array_get_double(ldms_set_t s, int id, int idx);