ldms/src/core/ldms_core.h

/**
 * \brief Metric value union
 *
 * A generic union that encapsulates all of the LDMS value types.
 */
typedef union ldms_value {
	char v_char;
	uint8_t v_u8;
	int8_t v_s8;
	uint16_t v_u16;
	int16_t v_s16;
	uint32_t v_u32;
	int32_t v_s32;
	uint64_t v_u64;
	int64_t v_s64;
	float v_f;
	double v_d;
	char a_char[OVIS_FLEX_UNION];
	uint8_t a_u8[OVIS_FLEX_UNION];
	int8_t a_s8[OVIS_FLEX_UNION];
	uint16_t a_u16[OVIS_FLEX_UNION];
	int16_t a_s16[OVIS_FLEX_UNION];
	uint32_t a_u32[OVIS_FLEX_UNION];
	int32_t a_s32[OVIS_FLEX_UNION];
	uint64_t a_u64[OVIS_FLEX_UNION];
	int64_t a_s64[OVIS_FLEX_UNION];
	float a_f[OVIS_FLEX_UNION];
	double a_d[OVIS_FLEX_UNION];
} *ldms_mval_t;
/**
 * \brief LDMS value type enumeration
 * Note: the numeric values must be < 255, as enum ldms_value_type fitting
 * into a byte is assumed in some transmission protocols.
 */
enum ldms_value_type {
	LDMS_V_NONE = 0,
	LDMS_V_CHAR,
	LDMS_V_U8,
	LDMS_V_S8,
	LDMS_V_U16,
	LDMS_V_S16,
	LDMS_V_U32,
	LDMS_V_S32,
	LDMS_V_U64,
	LDMS_V_S64,
	LDMS_V_F32,
	LDMS_V_D64,
	LDMS_V_CHAR_ARRAY,
	LDMS_V_U8_ARRAY,
	LDMS_V_S8_ARRAY,
	LDMS_V_U16_ARRAY,
	LDMS_V_S16_ARRAY,
	LDMS_V_U32_ARRAY,
	LDMS_V_S32_ARRAY,
	LDMS_V_U64_ARRAY,
	LDMS_V_S64_ARRAY,
	LDMS_V_F32_ARRAY,
	LDMS_V_D64_ARRAY,
	LDMS_V_FIRST = LDMS_V_CHAR,
	LDMS_V_LAST = LDMS_V_D64_ARRAY
};