ldms/python/ldms.pxd


    int ldms_set_info_set(ldms_set_t s, const char *key, const char *value)
    void ldms_set_info_unset(ldms_set_t s, const char *key)
    char *ldms_set_info_get(ldms_set_t s, const char *key)
    ctypedef void (*ldms_update_cb_t)(ldms_t t, ldms_set_t s, int flags, void *arg)
    cpdef enum:
        UPD_F_PUSH       "LDMS_UPD_F_PUSH"
        UPD_F_PUSH_LAST  "LDMS_UPD_F_PUSH_LAST"
        UPD_F_MORE       "LDMS_UPD_F_MORE"
        UPD_ERROR_MASK   "LDMS_UPD_ERROR_MASK"
        LDMS_UPD_F_PUSH
        LDMS_UPD_F_PUSH_LAST
        LDMS_UPD_F_MORE
        LDMS_UPD_ERROR_MASK
    int LDMS_UPD_ERROR(int flags)
    int ldms_xprt_update(ldms_set_t s, ldms_update_cb_t update_cb, void *arg)
    cpdef enum ldms_value_type:
        V_NONE        "LDMS_V_NONE"
        V_CHAR        "LDMS_V_CHAR"
        V_U8          "LDMS_V_U8"
        V_S8          "LDMS_V_S8"
        V_U16         "LDMS_V_U16"
        V_S16         "LDMS_V_S16"
        V_U32         "LDMS_V_U32"
        V_S32         "LDMS_V_S32"
        V_U64         "LDMS_V_U64"
        V_S64         "LDMS_V_S64"
        V_F32         "LDMS_V_F32"
        V_D64         "LDMS_V_D64"
        V_CHAR_ARRAY  "LDMS_V_CHAR_ARRAY"
        V_U8_ARRAY    "LDMS_V_U8_ARRAY"
        V_S8_ARRAY    "LDMS_V_S8_ARRAY"
        V_U16_ARRAY   "LDMS_V_U16_ARRAY"
        V_S16_ARRAY   "LDMS_V_S16_ARRAY"
        V_U32_ARRAY   "LDMS_V_U32_ARRAY"
        V_S32_ARRAY   "LDMS_V_S32_ARRAY"
        V_U64_ARRAY   "LDMS_V_U64_ARRAY"
        V_S64_ARRAY   "LDMS_V_S64_ARRAY"
        V_F32_ARRAY   "LDMS_V_F32_ARRAY"
        V_D64_ARRAY   "LDMS_V_D64_ARRAY"
        V_FIRST       "LDMS_V_FIRST"
        V_LAST        "LDMS_V_LAST"
        LDMS_V_NONE
        LDMS_V_CHAR
        LDMS_V_U8
        LDMS_V_S8
        LDMS_V_U16
        LDMS_V_S16
        LDMS_V_U32
        LDMS_V_S32
        LDMS_V_U64
        LDMS_V_S64
        LDMS_V_F32
        LDMS_V_D64
        LDMS_V_CHAR_ARRAY
        LDMS_V_U8_ARRAY
        LDMS_V_S8_ARRAY
        LDMS_V_U16_ARRAY
        LDMS_V_S16_ARRAY
        LDMS_V_U32_ARRAY
        LDMS_V_S32_ARRAY
        LDMS_V_U64_ARRAY
        LDMS_V_S64_ARRAY
        LDMS_V_F32_ARRAY
        LDMS_V_D64_ARRAY
        LDMS_V_FIRST
        LDMS_V_LAST
    union ldms_value:
        char v_char
        uint8_t v_u8
        int8_t v_s8
        uint16_t v_u16
        int16_t v_s16
        uint32_t v_u32
        int32_t v_s32
        uint64_t v_u64
        int64_t v_s64
        float v_f
        double v_d
        char a_char[0]
        uint8_t a_u8[0]
        int8_t a_s8[0]
        uint16_t a_u16[0]
        int16_t a_s16[0]
        uint32_t a_u32[0]
        int32_t a_s32[0]
        uint64_t a_u64[0]
        int64_t a_s64[0]
        float a_f[0]
        double a_d[0]
    ctypedef ldms_value *ldms_mval_t
    int ldms_metric_by_name(ldms_set_t s, const char *name)
    const char *ldms_metric_name_get(ldms_set_t s, int i)
    int ldms_type_is_array(ldms_value_type t)
    ldms_value_type ldms_metric_type_get(ldms_set_t s, int i)
    ldms_mval_t ldms_metric_get(ldms_set_t s, int i)
    # --- set metric get --- #
    char ldms_metric_get_char(ldms_set_t s, int i)
    uint8_t ldms_metric_get_u8(ldms_set_t s, int i)
    uint16_t ldms_metric_get_u16(ldms_set_t s, int i)
    uint32_t ldms_metric_get_u32(ldms_set_t s, int i)
    uint64_t ldms_metric_get_u64(ldms_set_t s, int i)
    int8_t ldms_metric_get_s8(ldms_set_t s, int i)
    int16_t ldms_metric_get_s16(ldms_set_t s, int i)
    int32_t ldms_metric_get_s32(ldms_set_t s, int i)
    int64_t ldms_metric_get_s64(ldms_set_t s, int i)
    float ldms_metric_get_float(ldms_set_t s, int i)
    double ldms_metric_get_double(ldms_set_t s, int i)
    uint32_t ldms_metric_array_get_len(ldms_set_t s, int i)
    const char *ldms_metric_array_get_str(ldms_set_t s, int i)
    char ldms_metric_array_get_char(ldms_set_t s, int i, int idx)
    uint8_t ldms_metric_array_get_u8(ldms_set_t s, int i, int idx)
    uint16_t ldms_metric_array_get_u16(ldms_set_t s, int i, int idx)
    uint32_t ldms_metric_array_get_u32(ldms_set_t s, int i, int idx)
    uint64_t ldms_metric_array_get_u64(ldms_set_t s, int i, int idx)
    int8_t ldms_metric_array_get_s8(ldms_set_t s, int i, int idx)
    int16_t ldms_metric_array_get_s16(ldms_set_t s, int i, int idx)
    int32_t ldms_metric_array_get_s32(ldms_set_t s, int i, int idx)
    int64_t ldms_metric_array_get_s64(ldms_set_t s, int i, int idx)
    float ldms_metric_array_get_float(ldms_set_t s, int i, int idx)
    double ldms_metric_array_get_double(ldms_set_t s, int i, int idx)

    # --- set schema --- #
    struct ldms_schema_s:
        pass
    ctypedef ldms_schema_s *ldms_schema_t
    ldms_schema_t ldms_schema_new(const char *schema_name)
    void ldms_schema_delete(ldms_schema_t schema)
    int ldms_schema_metric_count_get(ldms_schema_t schema)
    int ldms_schema_array_card_set(ldms_schema_t schema, int card)
    size_t ldms_schema_set_size(const char *instance_name,
                                const ldms_schema_t schema)
    int ldms_schema_metric_add(ldms_schema_t s, const char *name,
                               ldms_value_type t)
    int ldms_schema_meta_add(ldms_schema_t s, const char *name,
                             ldms_value_type t)
    int ldms_schema_metric_array_add(ldms_schema_t s, const char *name,
                                     ldms_value_type t, uint32_t count)
    int ldms_schema_meta_array_add(ldms_schema_t s, const char *name,
                                   ldms_value_type t, uint32_t count)

    # --- set provider --- #
    ldms_set_t ldms_set_new(const char *instance_name, ldms_schema_t schema)
    ldms_set_t ldms_set_new_with_auth(const char *instance_name,
				  ldms_schema_t schema,
				  uid_t uid, gid_t gid, mode_t perm)
    int ldms_set_publish(ldms_set_t set)
    int ldms_set_unpublish(ldms_set_t set)
    void ldms_set_delete(ldms_set_t s)
    void ldms_set_put(ldms_set_t s)
    void ldms_metric_set_char(ldms_set_t s, int i, char v)
    void ldms_metric_set_u8(ldms_set_t s, int i, uint8_t v)
    void ldms_metric_set_u16(ldms_set_t s, int i, uint16_t v)
    void ldms_metric_set_u32(ldms_set_t s, int i, uint32_t v)
    void ldms_metric_set_u64(ldms_set_t s, int i, uint64_t v)
    void ldms_metric_set_s8(ldms_set_t s, int i, int8_t v)
    void ldms_metric_set_s16(ldms_set_t s, int i, int16_t v)
    void ldms_metric_set_s32(ldms_set_t s, int i, int32_t v)
    void ldms_metric_set_s64(ldms_set_t s, int i, int64_t v)
    void ldms_metric_set_float(ldms_set_t s, int i, float v)
    void ldms_metric_set_double(ldms_set_t s, int i, double v)
    void ldms_metric_array_set_str(ldms_set_t s, int mid, const char *str)
    void ldms_metric_array_set_char(ldms_set_t s, int mid, int idx, char v)
    void ldms_metric_array_set_u8(ldms_set_t s, int mid, int idx, uint8_t v)
    void ldms_metric_array_set_u16(ldms_set_t s, int mid, int idx, uint16_t v)
    void ldms_metric_array_set_u32(ldms_set_t s, int mid, int idx, uint32_t v)
    void ldms_metric_array_set_u64(ldms_set_t s, int mid, int idx, uint64_t v)
    void ldms_metric_array_set_s8(ldms_set_t s, int mid, int idx, int8_t v)
    void ldms_metric_array_set_s16(ldms_set_t s, int mid, int idx, int16_t v)
    void ldms_metric_array_set_s32(ldms_set_t s, int mid, int idx, int32_t v)
    void ldms_metric_array_set_s64(ldms_set_t s, int mid, int idx, int64_t v)
    void ldms_metric_array_set_float(ldms_set_t s, int mid, int idx, float v)
    void ldms_metric_array_set_double(ldms_set_t s, int mid, int idx, double v)
